fixed missing margin

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -136,6 +136,7 @@ article {
 
 .finance-article {
   height: 100vh;
+  margin-top: 12vh;
 }
 
 /* ********* WELCOME ********* */
